<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroBluetoothEX</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="text_bluetooth_off">Bluetooth is Off</string>
    <string name="text_bluetooth_on">Bluetooth is On</string>
    
    <string name="text_enable">Enable</string>
    <string name="text_force_enable">Force Enable</string>
    <string name="text_disable">Disable</string>
    
    <string name="text_view_paired">Available Devices</string>
    <string name="text_scan_devices">Scan Devices</string>
    <string name="text_stop_scan">Scan Devices</string>
    <string name="text_connect_device">Connect Device</string>
    
    <string name="text_list_paired_devices">Paired Devices</string>
    <string name="text_list_devices">List of Devices</string>
    
    <string name="text_pair">Pair</string>
    
</resources>